# project-krasss

./: .gitignore  README.md  eda_bivariate.ipynb  eda_rudranshi.ipynb
EDA/: eda_bivariate.ipynb  eda_rudranshi.ipynb
app/: README.md  app.py  assessor.py  diagnostics.ipynb  explore_dev.py  kernel_ridge.py  main.py  pyproject.toml  random_fourier_features.py  style_guide.html
app_old/: assessor.py  kernel_ridge.py  pyproject.toml
data/: census_panel.csv  df_pivot.csv  merged_final.csv  merged_final_transformed.csv  weather_data_combined.csv
data_cleaning/: .gitignore  all_wban_us_weather_stations.csv  cdc_data.ipynb  climate_types_county_2015.parquet  combined_weather_final.csv  combined_weather_raw.csv  merge_data.ipynb  missing_county_stations_updated.csv  pyproject.toml  unmatched_counties_updated.csv
data_cleaning/data_files/: combined_cdc_final.csv  combined_census_final.csv  final_county_list.csv
data_cleaning/notebooks/: census_data.ipynb  weather_data.ipynb
docs/: KRASSS documentation draft 2.docx  KRASSS_documentation_outline.docx  app_map_final.4 (3).html  coding_practices.md  user_requirements.docx  ~$er_requirements.docx
exploratory_data_analysis/: data_inspection.ipynb  eda_univariate.ipynb
flask_app_santiago/: README.md  app.py  assessment.py  krr.py  main.py  pyproject.toml  scenarios.py  splitter.py  train.py
ml_scripts/: KRR_testing.ipynb  casthma_ml_algo.ipynb  decision_trees.ipynb  implementation_guidance.ipynb  mhlth_ml_algo.ipynb  phlth_ml_algo.ipynb  pyproject.toml  sleep_ml_algo.ipynb  testing_ml_algorithms.ipynb
(+409 files in other folders)
